fix buttons having forced backgrounds on mobiles (the disappearing buttons on forums that this was introduced on, was probably a side effect of chrome incorrectly reporting touch support with dev tools open)

--- a/src/main/resources/scss/app.scss
+++ b/src/main/resources/scss/app.scss
@@ -109,12 +109,7 @@ html { -webkit-text-size-adjust: 100%; -webkit-font-smoothing: antialiased; }
 html.touch {
 	button, .button {
 		&:hover/*, &:focus */ {
-			background-color: $button-bg-color;
-		}
-		&.secondary {
-			&:hover {
-				background-color: $secondary-button-bg-hover;
-			}
+			background-color: inherit;
 		}
 	}
 }
